# codex-auth-sync

./: .pre-commit-config.yaml  Dockerfile.lambda_native  README.md  pyproject.toml
.opencode/: opencode.jsonc
.zed/: settings.json
src/app/: awslambda.py  cli.py  types.py  version.py
src/app/types/: __init__.py  codex.py  common.py  opencode.py  pi.py
tests/: test_cli.py  test_io.py  test_types.py
